fix(core): visible incorrect initial position from `TuiDropdownComponent` & `TuiHintComponent` without animation & ngZoneEventCoalescing

--- a/projects/core/directives/dropdown/dropdown.style.less
+++ b/projects/core/directives/dropdown/dropdown.style.less
@@ -16,6 +16,10 @@
     &.ng-animating {
         pointer-events: none;
     }
+
+    &:not([style*='top']) {
+        visibility: hidden;
+    }
 }
 
 .t-wrapper {
